--- a/public/contact.html
+++ b/public/contact.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - MyBusiness Premium</title>
+  <title>Contact Us - YourBrand</title>
+  <!-- External CSS -->
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -33,18 +35,8 @@
       align-items: center;
       text-align: center;
     }
-    .map {
-      width: 100%;
-      height: 300px;
-      border: 0;
-    }
-    .info-item {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 1rem;
-      color: #555;
-    }
+    .map { width: 100%; height: 300px; border: 0; }
+    .info-item { display: flex; align-items: center; gap: 10px; font-size: 1rem; color: #555; }
     .info-item a { color: inherit; text-decoration: none; }
     .contact-form {
       background: #f7f7f7;
@@ -54,22 +46,18 @@
       max-width: 600px;
       margin: 0 auto;
     }
-    .contact-form form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
+    .contact-form form { display: flex; flex-direction: column; gap: 15px; }
     .contact-form label { font-weight: 600; color: #555; }
-    .contact-form input,
+    .contact-form input[type="text"],
+    .contact-form input[type="email"],
     .contact-form textarea {
+      width: 100%;
       padding: 12px;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 4px;
-      width: 100%;
     }
-    .contact-form input:focus,
-    .contact-form textarea:focus { outline: none; border-color: #4caf50; }
+    .contact-form textarea { min-height: 80px; }
     .contact-form button {
       padding: 12px;
       font-size: 1.1rem;
@@ -88,30 +76,32 @@
   </style>
 </head>
 <body>
+  <!-- External Header -->
   <div id="header-placeholder"></div>
+  
   <main>
-    <h1 id="contactPageTitleElement">Contact Us</h1>
+    <h1>Contact Us</h1>
     <section class="about">
-      <h2 id="contactAboutHeadingElement">About YourBrand</h2>
-      <p id="contactAboutTextElement">YourBrand is dedicated to delivering innovative solutions with passion and professionalism. Our team is here to help answer your queries and build lasting relationships with our clients and partners.</p>
+      <h2>About YourBrand</h2>
+      <p>YourBrand is dedicated to delivering innovative solutions with passion and professionalism. Our team is here to help answer your queries and build lasting relationships with our clients and partners.</p>
     </section>
     <section class="contact-info">
-      <iframe class="map" id="contactMapElement" src="default-map-embed-url" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.901314824395!2d90.3892023153622!3d23.750903494563154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8586d0e3a39%3A0x4d725845f6eb702b!2sDhaka!5e0!3m2!1sen!2sbd!4v1583489459389!5m2!1sen!2sbd" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       <div class="info-item">
         <i class="fas fa-phone-alt"></i>
-        <span id="contactPhoneElement">+1 234 567 890</span>
+        <span>+92 300 1234567</span>
       </div>
       <div class="info-item">
         <i class="fab fa-whatsapp"></i>
-        <a id="contactWhatsAppElement" href="https://wa.me/1234567890" target="_blank">WhatsApp: +1 234 567 890</a>
+        <a href="https://wa.me/923001234567" target="_blank">WhatsApp: +92 300 1234567</a>
       </div>
       <div class="info-item">
         <i class="fas fa-envelope"></i>
-        <a id="contactEmailElement" href="mailto:info@mybusiness.com">info@mybusiness.com</a>
+        <a href="mailto:info@yourbrand.com">info@yourbrand.com</a>
       </div>
       <div class="info-item">
         <i class="fas fa-map-marker-alt"></i>
-        <span id="contactAddressElement">Default Address, City, Country</span>
+        <span>123 Innovation Blvd, Tech City, Country</span>
       </div>
     </section>
     <section class="contact-form">
@@ -131,36 +121,22 @@
       </form>
     </section>
   </main>
+  
   <div id="footer-placeholder"></div>
   
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
-      authDomain: "e-commerce-pk.firebaseapp.com",
-      projectId: "e-commerce-pk",
-      storageBucket: "e-commerce-pk.firebasestorage.app",
-      messagingSenderId: "126517093225",
-      appId: "1:126517093225:web:c2352620c6d32c582513f8",
-      measurementId: "G-2G2DNCNNT3"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    
-    db.collection("pages").doc("contact").onSnapshot((doc) => {
-      if(doc.exists) {
-        const data = doc.data();
-        document.getElementById("contactPageTitleElement").innerText = data.pageTitle || "Contact Us";
-        document.getElementById("contactAboutHeadingElement").innerText = data.aboutHeading || "About YourBrand";
-        document.getElementById("contactAboutTextElement").innerText = data.aboutText || "YourBrand is dedicated to delivering innovative solutions with passion and professionalism. Our team is here to help answer your queries and build lasting relationships with our clients and partners.";
-        document.getElementById("contactPhoneElement").innerText = data.phone || "+1 234 567 890";
-        document.getElementById("contactWhatsAppElement").innerText = data.whatsApp || "WhatsApp: +1 234 567 890";
-        document.getElementById("contactWhatsAppElement").href = data.whatsApp || "https://wa.me/1234567890";
-        document.getElementById("contactEmailElement").innerText = data.email || "info@mybusiness.com";
-        document.getElementById("contactAddressElement").innerText = data.address || "Default Address, City, Country";
-        document.getElementById("contactMapElement").src = data.mapURL || "default-map-embed-url";
-      }
+    function loadHTML(elementId, filePath, callback) {
+      fetch(filePath)
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById(elementId).innerHTML = html;
+          if(callback) callback();
+        })
+        .catch(err => console.error("Failed to load " + filePath, err));
+    }
+    document.addEventListener("DOMContentLoaded", function() {
+      loadHTML("header-placeholder", "header.html");
+      loadHTML("footer-placeholder", "footer.html");
     });
   </script>
 </body>
