--- a/public/analytics.html
+++ b/public/analytics.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Analytics - Purchase Decision Helper</title>
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- FontAwesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
@@ -33,22 +36,20 @@
   </style>
 </head>
 <body>
+  <!-- External Header -->
   <div id="header-placeholder"></div>
+
   <div class="container">
     <div class="row mb-4">
       <div class="col-12">
         <h2 class="section-title">Data-Driven Insights for Informed Purchases</h2>
-        <p class="text-center">
-          Leverage real-time analytics and personalized suggestions to guide your purchase decisions.
-        </p>
+        <p class="text-center">Leverage real-time analytics and personalized suggestions to guide your purchase decisions.</p>
       </div>
     </div>
     <div class="row mb-4">
       <div class="col-12">
         <div class="card shadow-sm">
-          <div class="card-header bg-primary text-white">
-            Overall Selling Trends
-          </div>
+          <div class="card-header bg-primary text-white">Overall Selling Trends</div>
           <div class="card-body">
             <div class="chart-container">
               <canvas id="salesChart"></canvas>
@@ -60,9 +61,7 @@
     <div class="row">
       <div class="col-12">
         <div class="card shadow-sm">
-          <div class="card-header bg-info text-white">
-            Personalized Product Suggestions
-          </div>
+          <div class="card-header bg-info text-white">Personalized Product Suggestions</div>
           <div class="card-body">
             <ul class="list-group" id="suggestions-list"></ul>
           </div>
@@ -70,19 +69,22 @@
       </div>
     </div>
   </div>
+
+  <!-- External Footer -->
   <div id="footer-placeholder"></div>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      fetch('header.html').then(response => response.text()).then(data => {
-        document.getElementById('header-placeholder').innerHTML = data;
-      }).catch(console.error);
-      fetch('footer.html').then(response => response.text()).then(data => {
-        document.getElementById('footer-placeholder').innerHTML = data;
-      }).catch(console.error);
+      fetch('header.html')
+        .then(response => response.text())
+        .then(data => { document.getElementById('header-placeholder').innerHTML = data; })
+        .catch(error => console.error('Error loading header:', error));
+      fetch('footer.html')
+        .then(response => response.text())
+        .then(data => { document.getElementById('footer-placeholder').innerHTML = data; })
+        .catch(error => console.error('Error loading footer:', error));
     });
-
     const ctx = document.getElementById('salesChart').getContext('2d');
     const salesChart = new Chart(ctx, {
       type: 'line',
@@ -104,12 +106,11 @@
         scales: {
           y: {
             beginAtZero: true,
-            ticks: { callback: value => '$' + value }
+            ticks: { callback: function(value) { return '$' + value; } }
           }
         }
       }
     });
-
     function fetchSuggestions() {
       return new Promise(resolve => {
         setTimeout(() => {
@@ -124,7 +125,7 @@
     fetchSuggestions().then(suggestions => {
       const list = document.getElementById('suggestions-list');
       suggestions.forEach(item => {
-        const li = document.createElement("li");
+        const li = document.createElement('li');
         li.className = 'list-group-item';
         li.innerHTML = `<strong>${item.name}</strong>: ${item.desc}`;
         list.appendChild(li);
