--- a/public/admin.html
+++ b/public/admin.html
@@ -46,10 +46,14 @@
       margin-bottom: 5px;
       border-radius: 4px;
       cursor: pointer;
+    }
+    .sidebar ul li a {
+      color: inherit;
+      text-decoration: none;
       display: flex;
       align-items: center;
     }
-    .sidebar ul li i { margin-right: 8px; }
+    .sidebar ul li a i { margin-right: 8px; }
     .sidebar ul li:hover, .sidebar ul li.active { background: #34495e; }
     
     /* Main Content Area */
@@ -83,8 +87,6 @@
       color: #555;
     }
   </style>
-  
-  <!-- Bootstrap Bundle JS will be loaded later -->
   <script>
     // Mobile Sidebar Toggle
     document.addEventListener("DOMContentLoaded", function(){
@@ -121,18 +123,18 @@
     <nav class="sidebar" id="sidebar">
       <h2>Pages</h2>
       <ul id="pagesList">
-        <!-- Each list item links to a separate admin file -->
-        <li><a href="admin_dashboard.html" style="text-decoration:none; color:inherit;"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-        <li><a href="home_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="ecommerce_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-shopping-bag"></i> Shop Now</a></li>
-        <li><a href="details_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-info-circle"></i> Details</a></li>
-        <li><a href="payments_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-credit-card"></i> Payments</a></li>
-        <li><a href="checkout_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-shopping-cart"></i> Checkout</a></li>
-        <li><a href="delivery_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-truck"></i> Delivery</a></li>
-        <li><a href="support_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-headset"></i> Support</a></li>
-        <li><a href="contact_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-envelope"></i> Contact</a></li>
-        <li><a href="analytics_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-chart-line"></i> Analytics</a></li>
-        <li><a href="about_admin.html" style="text-decoration:none; color:inherit;"><i class="fas fa-eye"></i> About</a></li>
+        <li><a href="admin_dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+        <li><a href="home_admin.html"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="header_admin.html"><i class="fas fa-ellipsis-h"></i> Header</a></li>
+        <li><a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i> Shop Now</a></li>
+        <li><a href="details_admin.html"><i class="fas fa-info-circle"></i> Details</a></li>
+        <li><a href="payments_admin.html"><i class="fas fa-credit-card"></i> Payments</a></li>
+        <li><a href="checkout_admin.html"><i class="fas fa-shopping-cart"></i> Checkout</a></li>
+        <li><a href="delivery_admin.html"><i class="fas fa-truck"></i> Delivery</a></li>
+        <li><a href="support_admin.html"><i class="fas fa-headset"></i> Support</a></li>
+        <li><a href="contact_admin.html"><i class="fas fa-envelope"></i> Contact</a></li>
+        <li><a href="analytics_admin.html"><i class="fas fa-chart-line"></i> Analytics</a></li>
+        <li><a href="about_admin.html"><i class="fas fa-eye"></i> About</a></li>
       </ul>
     </nav>
     
