--- a/public/admin.html
+++ b/public/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Panel – NextGen E-commerce</title>
   <!-- Bootstrap 5 CSS & Font Awesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,12 +17,8 @@
       flex-direction: column;
       background: #f8f9fa;
     }
-    /* External header/footer placeholders */
-    #external-header, #external-footer {
-      width: 100%;
-    }
-    /* Top Bar */
-    .topbar {
+    /* Admin Header (Internal) */
+    .admin-header {
       background: #fff;
       padding: 10px 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -31,28 +27,29 @@
       align-items: center;
       flex-shrink: 0;
     }
-    .topbar-left {
+    .admin-header .left-section {
       display: flex;
       align-items: center;
       gap: 10px;
     }
-    .hamburger {
+    .admin-header .hamburger {
       font-size: 1.5rem;
       cursor: pointer;
       color: #2c3e50;
     }
-    .brand-name {
-      font-size: 1.2rem;
+    .admin-header .brand {
+      font-size: 1rem; /* smaller size */
       font-weight: bold;
       color: #2c3e50;
     }
-    .topbar-center {
+    .admin-header .center-section {
       flex: 1;
       text-align: center;
       font-weight: bold;
       font-size: 1.2rem;
+      color: #2c3e50;
     }
-    .topbar-right {
+    .admin-header .right-section {
       display: flex;
       align-items: center;
       gap: 8px;
@@ -67,14 +64,8 @@
       padding: 15px;
       transition: transform 0.3s ease;
     }
-    .sidebar h2 {
-      font-size: 1.2rem;
-      margin-bottom: 15px;
-    }
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-    }
+    .sidebar h2 { font-size: 1.2rem; margin-bottom: 15px; }
+    .sidebar ul { list-style: none; padding: 0; }
     .sidebar ul li {
       margin-bottom: 5px;
     }
@@ -86,9 +77,7 @@
       border-radius: 4px;
     }
     .sidebar ul li a:hover,
-    .sidebar ul li a.active {
-      background: #34495e;
-    }
+    .sidebar ul li a.active { background: #34495e; }
     /* Main Content Area */
     .content { flex: 1; padding: 15px; overflow-y: auto; }
     .dashboard {
@@ -108,7 +97,7 @@
     @media (max-width: 767.98px) {
       .sidebar {
         position: fixed;
-        top: 60px;
+        top: 60px; /* height of admin header */
         left: 0;
         height: calc(100% - 60px);
         transform: translateX(-100%);
@@ -118,8 +107,8 @@
     }
   </style>
   <script>
-    // Sidebar toggle for mobile
     document.addEventListener("DOMContentLoaded", function() {
+      // Sidebar toggle for mobile devices
       const hamburger = document.getElementById("hamburger");
       const sidebar = document.getElementById("sidebar");
       hamburger.addEventListener("click", function(e) {
@@ -131,34 +120,22 @@
           sidebar.classList.remove("open");
         }
       });
-      // Load external header and footer into admin panel
-      function loadHTML(containerId, url) {
-        fetch(url)
-          .then(response => response.text())
-          .then(html => { document.getElementById(containerId).innerHTML = html; })
-          .catch(err => console.error("Error loading " + url + ": ", err));
-      }
-      loadHTML("external-header", "header.html");
-      loadHTML("external-footer", "footer.html");
     });
   </script>
 </head>
 <body>
-  <!-- External Header -->
-  <div id="external-header"></div>
-  
-  <!-- Top Bar -->
-  <div class="topbar">
-    <div class="topbar-left">
+  <!-- Admin Header (Internal) -->
+  <header class="admin-header">
+    <div class="left-section">
       <i class="fas fa-bars hamburger" id="hamburger"></i>
-      <span class="brand-name">Faiqtech Sol</span>
+      <span class="brand">Faiqtech Sol</span>
     </div>
-    <div class="topbar-center" id="pageTitle">Dashboard</div>
-    <div class="topbar-right">
+    <div class="center-section" id="pageTitle">Dashboard</div>
+    <div class="right-section">
       <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-user"></i> Admin</button>
       <button class="btn btn-outline-danger btn-sm"><i class="fas fa-sign-out-alt"></i> Logout</button>
     </div>
-  </div>
+  </header>
   
   <!-- Wrapper: Sidebar + Main Content -->
   <div class="wrapper">
@@ -190,8 +167,8 @@
     </div>
   </div>
   
-  <!-- External Footer -->
-  <div id="external-footer"></div>
+  <!-- (Optional) External Footer can be loaded if desired; for admin, you might choose to keep it simple -->
+  <!-- <div id="external-footer"></div> -->
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
