--- a/public/admin.html
+++ b/public/admin.html
@@ -17,45 +17,17 @@
       flex-direction: column;
       background: #f8f9fa;
     }
-    /* Admin Header (Internal) */
-    .admin-header {
-      background: #fff;
-      padding: 10px 15px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    /* Placeholders for external admin header and footer */
+    #admin-header-placeholder, #admin-footer-placeholder {
+      width: 100%;
       flex-shrink: 0;
     }
-    .admin-header .left-section {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .admin-header .hamburger {
-      font-size: 1.5rem;
-      cursor: pointer;
-      color: #2c3e50;
-    }
-    .admin-header .brand {
-      font-size: 1rem; /* smaller size */
-      font-weight: bold;
-      color: #2c3e50;
-    }
-    .admin-header .center-section {
-      flex: 1;
-      text-align: center;
-      font-weight: bold;
-      font-size: 1.2rem;
-      color: #2c3e50;
-    }
-    .admin-header .right-section {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
     /* Wrapper for Sidebar + Main Content */
-    .wrapper { flex: 1; display: flex; overflow: hidden; }
+    .wrapper {
+      flex: 1;
+      display: flex;
+      overflow: hidden;
+    }
     /* Sidebar */
     .sidebar {
       width: 250px;
@@ -64,8 +36,14 @@
       padding: 15px;
       transition: transform 0.3s ease;
     }
-    .sidebar h2 { font-size: 1.2rem; margin-bottom: 15px; }
-    .sidebar ul { list-style: none; padding: 0; }
+    .sidebar h2 {
+      font-size: 1.2rem;
+      margin-bottom: 15px;
+    }
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
     .sidebar ul li {
       margin-bottom: 5px;
     }
@@ -77,9 +55,16 @@
       border-radius: 4px;
     }
     .sidebar ul li a:hover,
-    .sidebar ul li a.active { background: #34495e; }
+    .sidebar ul li a.active {
+      background: #34495e;
+    }
     /* Main Content Area */
-    .content { flex: 1; padding: 15px; overflow-y: auto; }
+    .content {
+      flex: 1;
+      padding: 15px;
+      overflow-y: auto;
+    }
+    /* Dashboard Styles */
     .dashboard {
       text-align: center;
       padding: 20px;
@@ -93,30 +78,75 @@
       font-size: 1rem;
       color: #555;
     }
+    /* Summary Cards */
+    .card-summary {
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      padding: 20px;
+      color: #fff;
+      text-align: center;
+    }
+    .card-summary .card-icon {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+    .card-summary .card-title {
+      font-size: 1.2rem;
+      margin-bottom: 5px;
+    }
+    .card-summary .card-value {
+      font-size: 1.6rem;
+      font-weight: bold;
+    }
+    /* Chart Container */
+    .chart-container {
+      position: relative;
+      height: 300px;
+      margin-top: 20px;
+    }
     /* Mobile Responsive Sidebar */
     @media (max-width: 767.98px) {
       .sidebar {
         position: fixed;
-        top: 60px; /* height of admin header */
+        top: 0; /* External admin header is loaded separately */
         left: 0;
-        height: calc(100% - 60px);
+        height: 100%;
         transform: translateX(-100%);
         z-index: 2000;
       }
-      .sidebar.open { transform: translateX(0); }
+      .sidebar.open {
+        transform: translateX(0);
+      }
     }
+    /* Admin Footer Navigation (External file will be loaded) */
   </style>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
+      // Function to load external files into placeholders
+      function loadHTML(containerId, filePath) {
+        fetch(filePath)
+          .then(response => {
+            if (!response.ok) throw new Error("Error fetching " + filePath);
+            return response.text();
+          })
+          .then(html => { document.getElementById(containerId).innerHTML = html; })
+          .catch(error => console.error(error));
+      }
+      loadHTML("admin-header-placeholder", "admin_header.html");
+      loadHTML("admin-footer-placeholder", "admin_footer.html");
+
       // Sidebar toggle for mobile devices
-      const hamburger = document.getElementById("hamburger");
+      const hamburger = document.getElementById("admin-hamburger");
       const sidebar = document.getElementById("sidebar");
-      hamburger.addEventListener("click", function(e) {
-        e.stopPropagation();
-        sidebar.classList.toggle("open");
-      });
+      if (hamburger) {
+        hamburger.addEventListener("click", function(e) {
+          e.stopPropagation();
+          sidebar.classList.toggle("open");
+        });
+      }
       document.addEventListener("click", function(e) {
-        if (window.innerWidth < 768 && !sidebar.contains(e.target) && !hamburger.contains(e.target)) {
+        if (window.innerWidth < 768 && !sidebar.contains(e.target) && (!hamburger || !hamburger.contains(e.target))) {
           sidebar.classList.remove("open");
         }
       });
@@ -124,25 +154,15 @@
   </script>
 </head>
 <body>
-  <!-- Admin Header (Internal) -->
-  <header class="admin-header">
-    <div class="left-section">
-      <i class="fas fa-bars hamburger" id="hamburger"></i>
-      <span class="brand">Faiqtech Sol</span>
-    </div>
-    <div class="center-section" id="pageTitle">Dashboard</div>
-    <div class="right-section">
-      <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-user"></i> Admin</button>
-      <button class="btn btn-outline-danger btn-sm"><i class="fas fa-sign-out-alt"></i> Logout</button>
-    </div>
-  </header>
+  <!-- External Admin Header -->
+  <div id="admin-header-placeholder"></div>
   
   <!-- Wrapper: Sidebar + Main Content -->
   <div class="wrapper">
     <!-- Sidebar Navigation -->
     <nav class="sidebar" id="sidebar">
       <h2>Pages</h2>
-      <ul id="pagesList">
+      <ul>
         <li><a href="admin_dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
         <li><a href="home_admin.html"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="header_admin.html"><i class="fas fa-ellipsis-h"></i> Header</a></li>
@@ -162,14 +182,89 @@
     <div class="content" id="mainContent">
       <div class="dashboard">
         <h3>Welcome to the Admin Dashboard</h3>
-        <p>Select a page from the sidebar to edit its content.</p>
+        <p>Get a quick overview of your e-commerce performance.</p>
+        <div class="row g-3">
+          <!-- Summary Card: Total Sales -->
+          <div class="col-6 col-md-3">
+            <div class="card-summary bg-primary">
+              <div class="card-icon"><i class="fas fa-dollar-sign"></i></div>
+              <div class="card-title">Total Sales</div>
+              <div class="card-value">PKR 1,234,567</div>
+            </div>
+          </div>
+          <!-- Summary Card: New Orders -->
+          <div class="col-6 col-md-3">
+            <div class="card-summary bg-success">
+              <div class="card-icon"><i class="fas fa-shopping-cart"></i></div>
+              <div class="card-title">New Orders</div>
+              <div class="card-value">245</div>
+            </div>
+          </div>
+          <!-- Summary Card: Total Products -->
+          <div class="col-6 col-md-3">
+            <div class="card-summary bg-warning">
+              <div class="card-icon"><i class="fas fa-box"></i></div>
+              <div class="card-title">Products</div>
+              <div class="card-value">1,320</div>
+            </div>
+          </div>
+          <!-- Summary Card: Customers -->
+          <div class="col-6 col-md-3">
+            <div class="card-summary bg-danger">
+              <div class="card-icon"><i class="fas fa-users"></i></div>
+              <div class="card-title">Customers</div>
+              <div class="card-value">876</div>
+            </div>
+          </div>
+        </div>
+        <!-- Sales Trend Chart -->
+        <div class="chart-container mt-4">
+          <canvas id="salesChart"></canvas>
+        </div>
+        <!-- Recent Activity -->
+        <div class="mt-4">
+          <h4>Recent Activity</h4>
+          <ul class="list-group">
+            <li class="list-group-item">Order #1234 placed by John Doe.</li>
+            <li class="list-group-item">Product "Smartphone A" updated.</li>
+            <li class="list-group-item">New customer registered: Jane Smith.</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
   
-  <!-- (Optional) External Footer can be loaded if desired; for admin, you might choose to keep it simple -->
-  <!-- <div id="external-footer"></div> -->
+  <!-- External Admin Footer -->
+  <div id="admin-footer-placeholder"></div>
   
+  <!-- Bootstrap Bundle JS & Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    // Initialize Sales Trend Chart
+    document.addEventListener("DOMContentLoaded", function() {
+      const ctx = document.getElementById('salesChart').getContext('2d');
+      new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun'],
+          datasets: [{
+            label: 'Monthly Sales (PKR)',
+            data: [200000, 250000, 300000, 280000, 350000, 400000],
+            backgroundColor: 'rgba(54, 162, 235, 0.2)',
+            borderColor: 'rgba(54, 162, 235, 1)',
+            borderWidth: 2,
+            fill: true,
+            tension: 0.3
+          }]
+        },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          scales: { y: { beginAtZero: true } }
+        }
+      });
+    });
+  </script>
 </body>
 </html>
