--- a/public/admin_header.html
+++ b/public/admin_header.html
@@ -2,68 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Header</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* External Admin Header Styles */
+    /* Updated Admin Header Styles */
     .admin-header {
       background: #fff;
-      padding: 10px 15px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      padding: 5px 10px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
       display: flex;
-      flex-wrap: wrap; /* Allow wrapping on smaller screens */
       align-items: center;
       justify-content: space-between;
+      height: 50px; /* Reduced overall height */
     }
-    /* Each section takes full width on small screens */
-    .admin-header > .left-section,
-    .admin-header > .center-section,
-    .admin-header > .right-section {
-      flex: 1 1 100%;
-      text-align: center;
-      margin: 5px 0;
-    }
-    /* On screens 768px and wider, display in one row */
-    @media (min-width: 768px) {
-      .admin-header {
-        flex-wrap: nowrap;
-      }
-      .admin-header > .left-section {
-        flex: 1;
-        text-align: left;
-        margin: 0;
-      }
-      .admin-header > .center-section {
-        flex: 1;
-        text-align: center;
-        margin: 0;
-      }
-      .admin-header > .right-section {
-        flex: 1;
-        text-align: right;
-        margin: 0;
-      }
-    }
+    /* Left Section: Hamburger & Brand */
     .left-section {
       display: flex;
       align-items: center;
-      gap: 10px;
-      justify-content: center;
+      flex: 0 0 auto;
     }
     .hamburger {
       font-size: 1.5rem;
       cursor: pointer;
       color: #2c3e50;
+      margin-right: 5px;
     }
     .brand {
-      font-size: 1rem;
+      font-size: 0.85rem; /* Smaller, stylish font */
       font-weight: bold;
       color: #2c3e50;
     }
+    /* Center Section: Page Title */
+    .center-section {
+      flex: 1;
+      text-align: center;
+      font-size: 1rem;
+      color: #2c3e50;
+    }
+    /* Right Section: Admin & Logout Buttons */
+    .right-section {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      flex: 0 0 auto;
+    }
     .right-section button {
-      font-size: 0.8rem;
-      padding: 5px 10px;
-      margin-left: 5px;
+      font-size: 0.75rem; /* Shrink button text */
+      padding: 3px 6px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      background: #fff;
+      cursor: pointer;
+    }
+    .right-section button i {
+      vertical-align: middle;
+    }
+    /* Responsive Adjustments */
+    @media (max-width: 600px) {
+      .admin-header {
+        flex-wrap: wrap;
+        height: auto;
+        padding: 5px;
+      }
+      .center-section {
+        margin-top: 3px;
+      }
     }
   </style>
 </head>
@@ -75,8 +78,8 @@
     </div>
     <div class="center-section" id="pageTitle">Dashboard</div>
     <div class="right-section">
-      <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-user"></i> Admin</button>
-      <button class="btn btn-outline-danger btn-sm"><i class="fas fa-sign-out-alt"></i> Logout</button>
+      <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-user"></i></button>
+      <button class="btn btn-outline-danger btn-sm"><i class="fas fa-sign-out-alt"></i></button>
     </div>
   </header>
 </body>
