--- a/public/admin_footer.html
+++ b/public/admin_footer.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Footer Navigation</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    /* Admin Footer Navigation Styles */
     .admin-footer {
       position: fixed;
       bottom: 0;
@@ -18,7 +21,7 @@
       font-size: 0.8rem;
       z-index: 1000;
     }
-    .admin-footer a {
+    .admin-footer a, .admin-footer .dropdown-toggle {
       text-decoration: none;
       color: #2c3e50;
       display: flex;
@@ -27,12 +30,17 @@
       flex: 1;
       transition: color 0.3s;
     }
-    .admin-footer a i {
+    .admin-footer a i, .admin-footer .dropdown-toggle i {
       font-size: 1.2rem;
       margin-bottom: 2px;
     }
     .admin-footer a.active {
       color: #007bff;
+    }
+    /* Dropdown Menu Styles */
+    .admin-footer .dropdown-menu {
+      min-width: 100px;
+      font-size: 0.8rem;
     }
   </style>
 </head>
@@ -45,11 +53,6 @@
     <a href="home_admin.html">
       <i class="fas fa-home"></i>
       <span>Home</span>
-    </a>
-    <a href="header_admin.html">
-      <!-- Changed from fa-ellipsis-h to fa-heading -->
-      <i class="fas fa-heading"></i>
-      <span>Header</span>
     </a>
     <a href="ecommerce_admin.html">
       <i class="fas fa-shopping-bag"></i>
@@ -75,6 +78,7 @@
       <i class="fas fa-headset"></i>
       <span>Support</span>
     </a>
+    <!-- Main Contact icon instead of Header -->
     <a href="contact_admin.html">
       <i class="fas fa-envelope"></i>
       <span>Contact</span>
@@ -87,6 +91,24 @@
       <i class="fas fa-eye"></i>
       <span>About</span>
     </a>
+    <!-- "More" Dropdown containing the Header link -->
+    <div class="dropdown">
+      <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">
+        <i class="fas fa-chevron-down"></i>
+        <span>More</span>
+      </a>
+      <ul class="dropdown-menu">
+        <li>
+          <a class="dropdown-item" href="header_admin.html">
+            <i class="fas fa-heading"></i> Header
+          </a>
+        </li>
+        <!-- You can add other less-used links here if needed -->
+      </ul>
+    </div>
   </footer>
+  
+  <!-- Bootstrap Bundle JS (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
